manifest/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: bookshop
  name: frontend
  # Ingress annotations - AWS Load Balancer Controller
  # https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.4/guide/ingress/annotations/
  annotations:
    alb.ingress.kubernetes.io/group.name: baseport-prd
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/tags: "PROJECT=BASEPORT"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:674582907715:certificate/1fe9b416-1ccf-42b6-b77f-3e187e56edb1
    alb.ingress.kubernetes.io/security-groups: sg-04281baca92611c79
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "true"
    #alb.ingress.kubernetes.io/healthcheck-path: /realms/master
spec:
  ingressClassName: alb
  rules:
    - host: bookshop.prd.baseport.net
      http:
        paths:
          - path: /
            backend:
              service:
                name: frontend
                port:
                  number: 80
            pathType: Prefix
